# VisualSplit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: nextjs.yml
project_page/: README.md  next.config.ts  package-lock.json  package.json
project_page/app/: globals.css  layout.tsx  page.tsx
project_page/app/colour-map-examples/: page.tsx
project_page/app/restoration-examples/: page.tsx
project_page/components/: HistogramSlider.tsx  ImageSlider.tsx  OtherModelSlider.tsx  RestorationTable.tsx
visualsplit/: __init__.py  config.py
visualsplit/dataset_loader/: __init__.py
visualsplit/dataset_loader/ImageNet1k/: ImageNet_1K_dataloader.py  __init__.py
visualsplit/models/: CrossViT.py
visualsplit/pipeline/: train_CrossViT.py
visualsplit/utils/: __init__.py  calculate_colour_histogram.py  calculate_loss.py  create_folder.py  edge_detection.py  extract_features.py  load_dataset.py  random_crop_shorter_edge.py  save_model.py
